--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#What's New">What's New</a></li>
             <li><a href="#Experiences">Experiences</a></li>
             <li><a href="#Extra">Extra</a></li>
-            <li><a href="#Contact">Contact</a></li> 
+            <li><a href="#Future">Future</a></li> 
 
         </ul>
         <ul class="navbar_links">
@@ -37,37 +37,40 @@
 
     </nav>
 
-    <div class="section" id="Home">
-        <h1>JayK</h1>
-        <p>I am Jaesuk Kwon.<br>Texas is new place to live.</p>
+    <div class="container">
+        <div class="a" id="Home">
+            <h1>Home</h1>
+            <p>I am Jaesuk Kwon.<br>Texas is new place to live.</p>
+        </div>
+    
+        <div class="b" id="What's New">
+            <h1>What's New</h1>
+            <p>Everything is New. New project starts with new members.</p>
+        </div>
+        <div class="c" id="Experiences">
+            <h1>Experiences</h1>
+            <p>Building a carrier. Learning pyTorch<br>TensorFlow<br>Deep learning</p>
+        </div>
+        <div class="d" id="Extra">
+            <h1>Extra</h1>
+            <p>Tools; Labview<br>Python<br>Matlab<br></p>
+        </div>
+        <div class="e" id="Future">
+            <h1>Future</h1>
+            <p></p>
+        </div>
     </div>
 
-    <div class="section" id="What's New">
-        <h1>Everything is New</h1>
-        <p>New project starts with new members.</p>
-    </div>
-    <div class="selection" id="Experiences">
-        <h1>Building a carrier</h1>
-        <p>Learning pyTorch<br>TensorFlow<br>Deep learning</p>
-    </div>
-    <div class="selection" id="Extra">
-        <h1>Tools</h1>
-        <p>Labview<br>Python<br>Matlab<br></p>
-    </div>
-    <div class="selection" id="Contact">
-        <h1>Secure the contact</h1>
-        <p>I decline 'Spam' massages</p>
-    </div>
     <footer>
         <footer class="footer">
             <div class="footer_logo">
                 <a class="footer_logo" href="#"><i class="far fa-address-card fa-2x"></i>Home</a>
             </div>
             <div class="footer_text">
-                <p>Address, email</p>
+                <p>Address: E.Hill Dr.,Austin TX 78731<br>Contact: email, phone (I decline 'Spam' massages)</p>
             </div>
             <div class="footer_copy">
-                <p>Copyright@2022 JayK</p>
+                <p>Copyright@2022_JayK</p>
             </div>
             
         </footer>
