--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="e" id="Future">
             <h1>Future</h1>
-            <p></p>
+            <p>Plan & Schedule for the near Future</p><br><br>
         </div>
     </div>
 
